@@ -185,7 +185,10 @@ def processChunk(idf, site, good, filename, intTime=5.0, LFFT=64, Overlap=1, pol
 			if s  == 0 and pol == pols[0]:
 				pol1, pol2 = fxc.pol2pol(pol)
 				
-				fits = fitsidi.IDI(filename, refTime=refTime)
+				if len(mapper) > 255:
+					fits = fitsidi.ExtendedIDI(filename, refTime=refTime)
+				else:
+					fits = fitsidi.IDI(filename, refTime=refTime)
 				fits.setStokes(pols)
 				fits.setFrequency(freq[toUse])
 				fits.setGeometry(site, [a for a in mapper if a.pol == pol1])
